2010-09-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix grub_pxe_scan.

	* grub-core/fs/i386/pc/pxe.c (grub_pxe_pxenv): Put correct type bangpxe.
	(grub_pxe_scan): Fix types and pxe_rm_entry computation.
	All users updated.
	* include/grub/i386/pc/pxe.h (grub_pxe_bangpxe): New struct.
	(grub_pxe_pxenv): Correct type.

2010-09-01  Colin Watson  <cjwatson@ubuntu.com>

	* NEWS: Document most of the important changes since 1.98.

2010-09-01  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.in (usage): Tidy up usage output (and hence
	generated manual page) a little.

2010-09-01  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi: Add myself as an author.

2010-09-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.util.def (libgrub.a): Add missing sunpc.
	Reported by: Seth Goldberg.

2010-08-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Interrupt wrapping and code simplifications.

	* Makefile.util.def (grub-mkrescue): Use x86 tg instead of
	x86_noieee1275 which are functionaly equivalent in this case.
	(grub-install): Make source on each platform explicit. Enable on
	all noemu.
	* gentpl.py (x86_efi_pc): Removed group.
	(x86_noefi): Likewise.
	(i386_noefi): Likewise.
	(x86_noieee1275): Likewise.
	(i386_noieee1275): Likewise.
	(i386_noefi_noieee1275): Likewise.
	(i386_pc_qemu_coreboot): Likewise.
	(i386_coreboot_multiboot): Likewise.
	(i386_pc_coreboot_multiboot_qemu): Likewise.
	(x86_noefi_mips): Likewise.
	(noieee1275): Likewise.
	(ieee1275_mips): Likewise.
	(noemu_noieee1275): Likewise.
	(cmos): New group.
	(usb): Likewise.
	(videoinkernel): Likewise.
	(videomodules): Likewise.
	* grub-core/Makefile.am (KERNEL_HEADER_FILES): Remove
	include/grub/elf.h, include/grub/elfload.h, include/grub/net.h,
	include/grub/reader.h, include/grub/symbol.h, include/grub/types.h,
	include/grub/loader.h, include/grub/msdos_partition.h,
	include/grub/machine/biosdisk.h, include/grub/machine/boot.h,
	include/grub/machine/console.h, include/grub/machine/vga.h,